[package]
name = "neat-client"
description = "XOR for the neat algorithm."
version = "1.0.0"
authors = ["pkalivas <peterkalivas@gmail.com>"]
edition = "2018"


[dependencies]
radiate={path="../../../radiate"}
radiate_web={path="../../../radiate_web"}
serde = {version ="1.0", features = ["rc"]}
serde_json="1.0.44"
serde_derive="1.0.104"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
env_logger = "0.7.1"
uuid="0.8.1"
