[package]
name = "neat-server"
description = "XOR for the neat algorithm."
version = "1.0.0"
authors = ["pkalivas <peterkalivas@gmail.com>"]
edition = "2018"


[dependencies]
radiate={path="../../../radiate"}
radiate_web={path="../../../radiate_web"}
serde = {version ="1.0", features = ["rc"]}
serde_json="1.0.44"
serde_derive="1.0.104"
rocket="0.4.2"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "json"]